[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/contract_screen.gd" id="1"]
[ext_resource type="Script" path="res://scripts/starfield.gd" id="2"]

[node name="ContractScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 1)

[node name="Starfield" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="MarginContainer/VBox/HeaderPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HeaderHBox" type="HBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin"]
layout_mode = 2

[node name="TitleVBox" type="VBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderHBox/TitleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "ROCKET TYCOON"

[node name="Subtitle" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderHBox/TitleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Select a contract to begin your mission"

[node name="StatsVBox" type="VBoxContainer" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderHBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 5

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderHBox/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
text = "Funds: $500M"
horizontal_alignment = 2

[node name="TurnLabel" type="Label" parent="MarginContainer/VBox/HeaderPanel/HeaderMargin/HeaderHBox/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Turn 1 | Launches: 0/0"
horizontal_alignment = 2

[node name="ContractsPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContractsMargin" type="MarginContainer" parent="MarginContainer/VBox/ContractsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ContractsVBox" type="VBoxContainer" parent="MarginContainer/VBox/ContractsPanel/ContractsMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ContractsHeader" type="HBoxContainer" parent="MarginContainer/VBox/ContractsPanel/ContractsMargin/ContractsVBox"]
layout_mode = 2

[node name="ContractsTitle" type="Label" parent="MarginContainer/VBox/ContractsPanel/ContractsMargin/ContractsVBox/ContractsHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "AVAILABLE CONTRACTS"

[node name="RefreshButton" type="Button" parent="MarginContainer/VBox/ContractsPanel/ContractsMargin/ContractsVBox/ContractsHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "REFRESH - $10M"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ContractsPanel/ContractsMargin/ContractsVBox"]
layout_mode = 2

[node name="ContractsScroll" type="ScrollContainer" parent="MarginContainer/VBox/ContractsPanel/ContractsMargin/ContractsVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContractsList" type="VBoxContainer" parent="MarginContainer/VBox/ContractsPanel/ContractsMargin/ContractsVBox/ContractsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="FooterPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="FooterMargin" type="MarginContainer" parent="MarginContainer/VBox/FooterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="FooterHBox" type="HBoxContainer" parent="MarginContainer/VBox/FooterPanel/FooterMargin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="FreeLaunchButton" type="Button" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterHBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
theme_override_font_sizes/font_size = 16
text = "FREE LAUNCH MODE"

[node name="Spacer" type="Control" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewGameButton" type="Button" parent="MarginContainer/VBox/FooterPanel/FooterMargin/FooterHBox"]
layout_mode = 2
custom_minimum_size = Vector2(150, 50)
theme_override_font_sizes/font_size = 16
text = "NEW GAME"

[node name="GameManager" type="GameManager" parent="."]

[connection signal="pressed" from="MarginContainer/VBox/ContractsPanel/ContractsMargin/ContractsVBox/ContractsHeader/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/FooterPanel/FooterMargin/FooterHBox/FreeLaunchButton" to="." method="_on_free_launch_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/FooterPanel/FooterMargin/FooterHBox/NewGameButton" to="." method="_on_new_game_pressed"]
